--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>Aula6 - Git e GitHub</title>
 </head>
 <body>
-    
+    <!-- HEADER -->
+    <header>
+        <div class="logo">LOGO</div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="">Início</a>
+                </li>
+                <li>
+                    <a href="">sobre</a>
+                </li>
+                <li>
+                    <a href="">Contato</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
