--- a/index.html
+++ b/index.html
@@ -23,5 +23,23 @@
             </ul>
         </nav>
     </header>
+    <section id="banners">
+
+    </section>
+    <section id="depoimentos">
+
+    </section>
+    <section id="vantagens">
+
+    </section>
+    <section id="duvidas">
+
+    </section>
+    <section id="parceiros">
+
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
