Adicionado novos menus

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
                     <a href="">Início</a>
                 </li>
                 <li>
-                    <a href="">sobre</a>
+                    <a href="">Sobre</a>
                 </li>
                 <li>
                     <a href="">Contato</a>
+                </li>
+                <li>
+                    <a href="">Cursos</a>
                 </li>
             </ul>
         </nav>
