Adicionei um menu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                     <a href="">sobre</a>
                 </li>
                 <li>
+                    <a href="">Serviços</a>
+                </li>
+                <li>
                     <a href="">Contato</a>
                 </li>
             </ul>
