--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
         </nav>
     </header>
     <section id="banners">
+        <h2>Cursos disponíveis</h2>
+        <div class="cursos"></div>
 
+        <h2>Cursos de curta e média duração</h2>
+        <div class="cursos"></div>
+
+        <h2>Formação Avançada</h2>
+        <div class="cursos"></div>
+
+        <h2>Intensivos</h2>
+        <div class="cursos"></div>
     </section>
     <section id="depoimentos">
 
