Adicionei um menu

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <section id="banners">
-
+        mexer na mesma linha
     </section>
     <section id="depoimentos">
 
